<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
>

    <LinearLayout
            android:background="@drawable/fragment_filter_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@mipmap/app_logo"
                   android:layout_width="wrap_content"
                   android:layout_height="80dp"
                   android:layout_margin="12dp"
                />

        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <EditText
                  android:gravity="center"
                  android:id="@+id/input_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textCapWords"
                  android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText
                      android:gravity="center"
                      android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:gravity="center"
                      android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Signup Button -->
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn_round_corners_pink"
                android:padding="12dp"
                android:text="@string/create_account"/>

        <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/already_a_member_login"
                  android:gravity="center"
                  android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>