<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            >

        <androidx.appcompat.widget.AppCompatImageView
                android:src="@mipmap/company_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                />
        <TextView
                
                android:layout_margin="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:text="@string/company_slogan_long"

                />

        <TextView
                android:id="@+id/contact_name"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                />


        <EditText
                android:id="@+id/contact_edit_txt"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

            <Button
                    android:id="@+id/btn_send_to_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_round_corners_pink"
                    android:text="@string/rank"
                    android:padding="6dp"

                    />

            <Button
                    android:id="@+id/btn_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:background="@drawable/btn_round_corners_purple"
                    android:text="@string/Send" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>

