<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:textDirection="anyRtl"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:id="@+id/layout_top"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
            android:src="@mipmap/company_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:padding="18dp"
            />
    <TextView
            android:layout_margin="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/company_slogan_long"
            />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_bottom"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="24dp"
            android:gravity="center"
            android:orientation="vertical"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:maxWidth="300dp"
                android:text="@string/to_upload_new_animal"
                android:textAlignment="center"
                android:textSize="18sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:maxWidth="300dp"
                android:text="@string/click_here"
                android:textAlignment="center"
                android:textSize="18sp"
                />


    </LinearLayout>


</RelativeLayout>

