<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"

>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            >

        <TextView
                android:id="@+id/setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/setting_display_name"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"


                />

        <EditText
                android:id="@+id/setting_name_edit_txt"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14sp"
                app:layout_constraintTop_toBottomOf="@id/setting_name" />

        <Button

                android:id="@+id/setting_btn_save"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_corners_purple"
                android:text="@string/save"
                android:textSize="18sp"


                />


    </LinearLayout>

    <Button
            android:id="@+id/setting_btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14sp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:text="@string/del_account"
            android:textColor="@color/colorTextDel"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>