<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
    >
            <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
            >
                <Button
                        android:id="@+id/btn_nav_filter"
                        android:text="@string/filter"
                        android:layout_margin="12dp"
                        android:background="@drawable/btn_round_corners_purple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/btn_nav_favorite"
                        android:text="@string/txt_favorite"
                        android:layout_margin="12dp"
                        android:background="@drawable/btn_round_corners_purple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:focusable="true"
                        android:clickable="true"
                        android:layout_margin="12dp"
                        android:id="@+id/nav_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="צור קשר"/>

                <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nav_setting"
                        android:gravity="center"
                        android:text="הגדרות"
                        android:layout_margin="12dp"

                />
                <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="12dp"
                        android:id="@+id/nav_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/logout"/>
            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
